--- a/index.html
+++ b/index.html
@@ -1,166 +1,166 @@
 <!DOCTYPE html>
 	<html>
-		<head>
+		<head> <!--Título da página-->
 			<title> Planta AIB </title>
 		</head>
 		
-		<body>
-			<table style="width:100%" border="1" >
-				<tr>
-					<th rowspan="2" colspan="6">Quadro</th>
-					<th colspan="2">PC01</th>
+		<body> <!--Corpo da página-->
+			<table style="width:100%" border="1" > <!--Tag da tabela, com border e largura a 100%-->
+				<tr> <!--Header 1ª fila-->
+					<th rowspan="2" colspan="6">Quadro</th> <!--Ocupa 2 filas (rowspan="2") e 6 colunas (colspan="2")-->
+					<th colspan="2">PC01</th> <!--Número do computador-->
 				</tr>
-				<tr>
+				<tr> <!--Nome 1ª fila-->
 					<td colspan="2" align="center"><u>Prof. Luís Pitta</u></td>
 				</tr>
-				<tr>
-					<th colspan="2">PC05</th>
+				<tr> <!--Header 2ª fila-->
+					<th colspan="2">PC05</th> <!--Números dos computadores-->
 					<th colspan="2">PC04</th>
 					<th colspan="2">PC03</th>
 					<th colspan="2">PC02</th>
 				</tr>
 				<tr>
-					<td align="center">
-						<a href="images/goncaloc.jpg">
-							<img src="images/goncaloc.jpg" height="100" width="75"><br/>
+					<td align="center"> <!--Alunos 2ª fila-->
+						<a href="images/goncaloc.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/goncaloc.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#0000ff">12. Gonçalo Cardoso</u>
+						<u style="color:#0000ff">12. Gonçalo Cardoso</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/eduardo.jpg">
-							<img src="images/eduardo.jpg" height="100" width="75"><br/>
+						<a href="images/eduardo.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/eduardo.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#3cb371">8. Eduardo Coelho</u>
+						<u style="color:#3cb371">8. Eduardo Coelho</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/diogo.jpg">
-							<img src="images/diogo.jpg" height="100" width="75"><br/>
+						<a href="images/diogo.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/diogo.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ee82ee">7. Diogo Afonso</u>
+						<u style="color:#ee82ee">7. Diogo Afonso</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/toste.jpg">
-							<img src="images/toste.jpg" height="100" width="75"><br/>
+						<a href="images/toste.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/toste.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#95ff4c">2. António Toste</u>
+						<u style="color:#95ff4c">2. António Toste</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<u style="color:#ff0000">21. Pedro Soares</u>
+						<u style="color:#ff0000">21. Pedro Soares</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/joaod.jpg">
-							<img src="images/joaod.jpg" height="100" width="75"><br/>
+						<a href="images/joaod.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/joaod.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#6a5acd">17. João Diniz</u>
+						<u style="color:#6a5acd">17. João Diniz</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/gui.jpg">
-							<img src="images/gui.jpg" height="100" width="75"><br/>
+						<a href="images/gui.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/gui.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ffa1ee">14. Guilherme Carvalho</u>
+						<u style="color:#ffa1ee">14. Guilherme Carvalho</u> <!--Nome do aluno-->
 					</td>
 				</tr>
-				<tr>
-					<th colspan="2">PC09</th>
+				<tr> <!--Header 3ª fila-->
+					<th colspan="2">PC09</th> <!--Números dos computadores-->
 					<th colspan="2">PC08</th>
 					<th colspan="2">PC07</th>
 					<th colspan="2">PC06</th>
 				</tr>
-				<tr>
+				<tr> <!--Alunos 3ª fila-->
 					<td colspan="2" align="center">
-						<a href="images/dinis.jpg">
-							<img src="images/dinis.jpg" height="100" width="75"><br/>
+						<a href="images/dinis.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/dinis.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ff9900">6. Dinis Godinho</u>
+						<u style="color:#ff9900">6. Dinis Godinho</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/mila.jpg">
-							<img src="images/mila.jpg" height="100" width="75"><br/>
+						<a href="images/mila.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/mila.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#006666">9. Emília Tito</u>
+						<u style="color:#006666">9. Emília Tito</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/joaos.jpg">
-							<img src="images/joaos.jpg" height="100" width="75"><br/>
+						<a href="images/joaos.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/joaos.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#993333">16. João Santos</u>
+						<u style="color:#993333">16. João Santos</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/ricardo.jpg">
-							<img src="images/ricardo.jpg" height="100" width="75"><br/>
+						<a href="images/ricardo.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/ricardo.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#00ff00">22. Ricardo Mesquita</u>
+						<u style="color:#00ff00">22. Ricardo Mesquita</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/andre.jpg">
-							<img src="images/andre.jpg" height="100" width="75"><br/>
+						<a href="images/andre.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/andre.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ffff4c">1. André Rosado</u>
+						<u style="color:#ffff4c">1. André Rosado</u> <!--Nome do aluno-->
 					</td>
 				</tr>
-				<tr>
-					<th colspan="2">PC13</th>
+				<tr> <!--Header 4ª fila-->
+					<th colspan="2">PC13</th> <!--Números dos computadores-->
 					<th colspan="2">PC12</th>
 					<th colspan="2">PC11</th>
 					<th colspan="2">PC10</th>
 				</tr>
-				<tr>
+				<tr> <!--Alunos 4ª fila-->
 					<td colspan="2" align="center">
-						<a href="images/tomas.jpg">
-							<img src="images/tomas.jpg" height="100" width="75"><br/>
+						<a href="images/tomas.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/tomas.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#a8ff00">27. Tomás Philippart</u>
+						<u style="color:#a8ff00">27. Tomás Philippart</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/david.jpg">
-							<img src="images/david.jpg" height="100" width="75"><br/>
+						<a href="images/david.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/david.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ff6666">5. David Ferreira</u>
+						<u style="color:#ff6666">5. David Ferreira</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/filipa.jpg">
-							<img src="images/filipa.jpg" height="100" width="75"><br/>
+						<a href="images/filipa.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/filipa.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#3366cc">10. Filipa Costa</u>
+						<u style="color:#3366cc">10. Filipa Costa</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/ruben.jpg">
-							<img src="images/ruben.jpg" height="100" width="75"><br/>
+						<a href="images/ruben.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/ruben.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#669999">23. Rúben Alves</u>
+						<u style="color:#669999">23. Rúben Alves</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/leonor.jpg">
-							<img src="images/leonor.jpg" height="100" width="75"><br/>
+						<a href="images/leonor.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/leonor.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#cc66ff">18. Leonor Dias</u>
+						<u style="color:#cc66ff">18. Leonor Dias</u> <!--Nome do aluno-->
 					</td>
 				</tr>
-				<tr>
-					<th colspan="2">PC16</th>
+				<tr> <!--Header 5ª fila-->
+					<th colspan="2">PC16</th> <!--Números dos computadores-->
 					<th colspan="2"></th>
 					<th colspan="2">PC15</th>
 					<th colspan="2">PC14</th>
 				</tr>
-				<tr>
+				<tr> <!--Alunos 5ª fila-->
 					<td colspan="2" align="center">
-						<a href="images/joaob.jpg">
-							<img src="images/joaob.jpg" height="100" width="75"><br/>
+						<a href="images/joaob.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/joaob.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#8befff">15. João Beltrão</u>
+						<u style="color:#8befff">15. João Beltrão</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center"></td>
 					<td colspan="2" align="center">
-						<a href="images/pi.jpg">
-							<img src="images/pi.jpg" height="100" width="75"><br/>
+						<a href="images/pi.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/pi.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#a8bf00">19. Leonor Pinheiro</u>
+						<u style="color:#a8bf00">19. Leonor Pinheiro</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/tiago.jpg">
-							<img src="images/tiago.jpg" height="100" width="75"><br/>
+						<a href="images/tiago.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/tiago.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ff00ee">26. Tiago Garcia</u>
+						<u style="color:#ff00ee">26. Tiago Garcia</u> <!--Nome do aluno-->
 					</td>
 				</tr>
 		</body>
