--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head> <!--Título da página-->
 			<title> Planta AIB </title>
 		</head>
-		
+
 		<body> <!--Corpo da página-->
 			<table style="width:100%" border="1" > <!--Tag da tabela, com border e largura a 100%-->
 				<tr> <!--Header 1ª fila-->
@@ -45,6 +45,9 @@
 						<u style="color:#95ff4c">2. António Toste</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
+						<a href="images/pedros.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/pedros.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+						</a>
 						<u style="color:#ff0000">21. Pedro Soares</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
