--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 						<u style="color:#ff9900">6. Dinis Godinho</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/mila.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/mila.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="images/emilia.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="images/emilia.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#006666">9. Emília Tito</u> <!--Nome do aluno-->
 					</td>
