--- a/index.html
+++ b/index.html
@@ -22,43 +22,43 @@
 				<tr>
 					<td align="center"> <!--Alunos 2ª fila-->
 						<a href="images/goncaloc.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/goncaloc.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/goncalocp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#0000ff">12. Gonçalo Cardoso</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/eduardo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/eduardo.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/eduardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#3cb371">8. Eduardo Coelho</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/diogo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/diogo.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/diogop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ee82ee">7. Diogo Afonso</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/toste.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/toste.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/tostep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#95ff4c">2. António Toste</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/pedros.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/pedros.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/pedrosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff0000">21. Pedro Soares</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/joaod.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/joaod.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/joaodp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#6a5acd">17. João Diniz</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="images/gui.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/gui.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/guip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ffa1ee">14. Guilherme Carvalho</u> <!--Nome do aluno-->
 					</td>
@@ -72,31 +72,31 @@
 				<tr> <!--Alunos 3ª fila-->
 					<td colspan="2" align="center">
 						<a href="images/dinis.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/dinis.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/dinisp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff9900">6. Dinis Godinho</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="images/emilia.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/emilia.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/emiliap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#006666">9. Emília Tito</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="images/joaos.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/joaos.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/joaosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#993333">16. João Santos</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/ricardo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/ricardo.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/ricardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#00ff00">22. Ricardo Mesquita</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/andre.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/andre.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/andrep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ffff4c">1. André Rosado</u> <!--Nome do aluno-->
 					</td>
@@ -110,31 +110,31 @@
 				<tr> <!--Alunos 4ª fila-->
 					<td colspan="2" align="center">
 						<a href="images/tomas.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/tomas.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/tomasp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#a8ff00">27. Tomás Philippart</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/david.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/david.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/davidp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff6666">5. David Ferreira</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="images/filipa.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/filipa.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/filipap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#3366cc">10. Filipa Costa</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="images/ruben.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/ruben.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/rubenp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#669999">23. Rúben Alves</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="images/leonor.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/leonor.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/leonorp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#cc66ff">18. Leonor Dias</u> <!--Nome do aluno-->
 					</td>
@@ -148,20 +148,20 @@
 				<tr> <!--Alunos 5ª fila-->
 					<td colspan="2" align="center">
 						<a href="images/joaob.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/joaob.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/joaobp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#8befff">15. João Beltrão</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center"></td>
 					<td colspan="2" align="center">
 						<a href="images/pi.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/pi.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/pip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#a8bf00">19. Leonor Pinheiro</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="images/tiago.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/tiago.jpg" height="100" width="75"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="images/tiagop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff00ee">26. Tiago Garcia</u> <!--Nome do aluno-->
 					</td>
