nome pasta imagens

--- a/index.html
+++ b/index.html
@@ -21,44 +21,44 @@
 				</tr>
 				<tr>
 					<td align="center"> <!--Alunos 2ª fila-->
-						<a href="images/goncaloc.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/goncalocp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/goncaloc.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/goncalocp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#0000ff">12. Gonçalo Cardoso</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/eduardo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/eduardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/eduardo.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/eduardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#3cb371">8. Eduardo Coelho</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/diogo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/diogop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/diogo.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/diogop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ee82ee">7. Diogo Afonso</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/toste.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/tostep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/toste.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/tostep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#95ff4c">2. António Toste</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/pedros.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/pedrosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/pedros.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/pedrosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff0000">21. Pedro Soares</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/joaod.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/joaodp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/joaod.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/joaodp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#6a5acd">17. João Diniz</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/gui.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/guip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/gui.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/guip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ffa1ee">14. Guilherme Carvalho</u> <!--Nome do aluno-->
 					</td>
@@ -71,32 +71,32 @@
 				</tr>
 				<tr> <!--Alunos 3ª fila-->
 					<td colspan="2" align="center">
-						<a href="images/dinis.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/dinisp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/dinis.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/dinisp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff9900">6. Dinis Godinho</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/emilia.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/emiliap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/emilia.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/emiliap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#006666">9. Emília Tito</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/joaos.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/joaosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/joaos.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/joaosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#993333">16. João Santos</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/ricardo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/ricardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/ricardo.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/ricardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#00ff00">22. Ricardo Mesquita</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/andre.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/andrep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/andre.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/andrep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ffff4c">1. André Rosado</u> <!--Nome do aluno-->
 					</td>
@@ -109,32 +109,32 @@
 				</tr>
 				<tr> <!--Alunos 4ª fila-->
 					<td colspan="2" align="center">
-						<a href="images/tomas.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/tomasp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/tomas.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/tomasp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#a8ff00">27. Tomás Philippart</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/david.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/davidp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/david.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/davidp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff6666">5. David Ferreira</u> <!--Nome do aluno-->
 					</td>
 					<td align="center">
-						<a href="images/filipa.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/filipap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/filipa.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/filipap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#3366cc">10. Filipa Costa</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/ruben.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/rubenp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/ruben.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/rubenp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#669999">23. Rúben Alves</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/leonor.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/leonorp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/leonor.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/leonorp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#cc66ff">18. Leonor Dias</u> <!--Nome do aluno-->
 					</td>
@@ -147,21 +147,21 @@
 				</tr>
 				<tr> <!--Alunos 5ª fila-->
 					<td colspan="2" align="center">
-						<a href="images/joaob.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/joaobp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/joaob.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/joaobp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#8befff">15. João Beltrão</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center"></td>
 					<td colspan="2" align="center">
-						<a href="images/pi.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/pip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/pi.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/pip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#a8bf00">19. Leonor Pinheiro</u> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
-						<a href="images/tiago.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="images/tiagop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+						<a href="imagens/tiago.jpg"> <!--Link para imagem com resolução alta-->
+							<img src="imagens/tiagop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
 						</a>
 						<u style="color:#ff00ee">26. Tiago Garcia</u> <!--Nome do aluno-->
 					</td>
