--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 					<th colspan="2">PC01</th> <!--Número do computador-->
 				</tr>
 				<tr> <!--Nome 1ª fila-->
-					<td colspan="2" align="center"><u>Prof. Luís Pitta</u></td>
+					<td colspan="2" align="center">Prof. Luís Pitta</td>
 				</tr>
 				<tr> <!--Header 2ª fila-->
 					<th colspan="2">PC05</th> <!--Números dos computadores-->
@@ -22,45 +22,45 @@
 				<tr>
 					<td align="center"> <!--Alunos 2ª fila-->
 						<a href="imagens/goncaloc.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/goncalocp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/goncalocp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#0000ff">12. Gonçalo Cardoso</u> <!--Nome do aluno-->
+						<p style="color:#0000ff">12. Gonçalo Cardoso</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/eduardo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/eduardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/eduardop.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#3cb371">8. Eduardo Coelho</u> <!--Nome do aluno-->
+						<p style="color:#3cb371">8. Eduardo Coelho</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/diogo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/diogop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/diogop.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ee82ee">7. Diogo Afonso</u> <!--Nome do aluno-->
+						<p style="color:#ee82ee">7. Diogo Afonso</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/toste.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/tostep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/tostep.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#95ff4c">2. António Toste</u> <!--Nome do aluno-->
+						<p style="color:#95ff4c">2. António Toste</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/pedros.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/pedrosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/pedrosp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ff0000">21. Pedro Soares</u> <!--Nome do aluno-->
+						<p style="color:#ff0000">21. Pedro Soares</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/joaod.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/joaodp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/joaodp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#6a5acd">17. João Diniz</u> <!--Nome do aluno-->
+						<p style="color:#6a5acd">17. João Diniz</p> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="imagens/gui.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/guip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/guip.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ffa1ee">14. Guilherme Carvalho</u> <!--Nome do aluno-->
+						<p style="color:#ffa1ee">14. Guilherme Carvalho</p> <!--Nome do aluno-->
 					</td>
 				</tr>
 				<tr> <!--Header 3ª fila-->
@@ -72,33 +72,33 @@
 				<tr> <!--Alunos 3ª fila-->
 					<td colspan="2" align="center">
 						<a href="imagens/dinis.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/dinisp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/dinisp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ff9900">6. Dinis Godinho</u> <!--Nome do aluno-->
+						<p style="color:#ff9900">6. Dinis Godinho</p> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="imagens/emilia.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/emiliap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/emiliap.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#006666">9. Emília Tito</u> <!--Nome do aluno-->
+						<p style="color:#006666">9. Emília Tito</p> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="imagens/joaos.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/joaosp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/joaosp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#993333">16. João Santos</u> <!--Nome do aluno-->
+						<p style="color:#993333">16. João Santos</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/ricardo.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/ricardop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/ricardop.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#00ff00">22. Ricardo Mesquita</u> <!--Nome do aluno-->
+						<p style="color:#00ff00">22. Ricardo Mesquita</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/andre.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/andrep.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/andrep.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ffff4c">1. André Rosado</u> <!--Nome do aluno-->
+						<p style="color:#ffff4c">1. André Rosado</p> <!--Nome do aluno-->
 					</td>
 				</tr>
 				<tr> <!--Header 4ª fila-->
@@ -110,33 +110,33 @@
 				<tr> <!--Alunos 4ª fila-->
 					<td colspan="2" align="center">
 						<a href="imagens/tomas.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/tomasp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/tomasp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#a8ff00">27. Tomás Philippart</u> <!--Nome do aluno-->
+						<p style="color:#a8ff00">27. Tomás Philippart</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/david.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/davidp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/davidp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ff6666">5. David Ferreira</u> <!--Nome do aluno-->
+						<p style="color:#ff6666">5. David Ferreira</p> <!--Nome do aluno-->
 					</td>
 					<td align="center">
 						<a href="imagens/filipa.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/filipap.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/filipap.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#3366cc">10. Filipa Costa</u> <!--Nome do aluno-->
+						<p style="color:#3366cc">10. Filipa Costa</p> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="imagens/ruben.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/rubenp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/rubenp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#669999">23. Rúben Alves</u> <!--Nome do aluno-->
+						<p style="color:#669999">23. Rúben Alves</p> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="imagens/leonor.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/leonorp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/leonorp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#cc66ff">18. Leonor Dias</u> <!--Nome do aluno-->
+						<p style="color:#cc66ff">18. Leonor Dias</p> <!--Nome do aluno-->
 					</td>
 				</tr>
 				<tr> <!--Header 5ª fila-->
@@ -148,22 +148,22 @@
 				<tr> <!--Alunos 5ª fila-->
 					<td colspan="2" align="center">
 						<a href="imagens/joaob.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/joaobp.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/joaobp.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#8befff">15. João Beltrão</u> <!--Nome do aluno-->
+						<p style="color:#8befff">15. João Beltrão</p> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center"></td>
 					<td colspan="2" align="center">
 						<a href="imagens/pi.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/pip.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/pip.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#a8bf00">19. Leonor Pinheiro</u> <!--Nome do aluno-->
+						<p style="color:#a8bf00">19. Leonor Pinheiro</p> <!--Nome do aluno-->
 					</td>
 					<td colspan="2" align="center">
 						<a href="imagens/tiago.jpg"> <!--Link para imagem com resolução alta-->
-							<img src="imagens/tiagop.jpg"><br/> <!--Fotografia tipo passe do aluno-->
+							<img src="imagens/tiagop.jpg"> <!--Fotografia tipo passe do aluno-->
 						</a>
-						<u style="color:#ff00ee">26. Tiago Garcia</u> <!--Nome do aluno-->
+						<p style="color:#ff00ee">26. Tiago Garcia</p> <!--Nome do aluno-->
 					</td>
 				</tr>
 		</body>
